intel/bench_25/extr_libsodiumtestdefaultmisuse.c_xmain/log.txt
bench_25/extr_libsodiumtestdefaultmisuse.c_xmain/extr_libsodiumtestdefaultmisuse.c_xmain.c:7:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
